--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="../img/Logo.png" alt="logo de alura" class="logo">
+        <img src="./img/Logo.png" alt="logo de alura" class="logo">
     </header>
 
     <main class="container">
